--- a/css/main.css
+++ b/css/main.css
@@ -7,4 +7,174 @@ body{
 	/*font-weight: 300;*/
 	list-style: none;
 	color: #3E3F40;
+	width: 1000px;
+	margin: 0 auto;
+}
+h1{
+	transform: scaleY(1.1);
+	font-weight: 500;
+	font-size: 35px;
+}
+h2{
+	transform: scaleY(1.1);
+	font-weight: 500;
+}
+input{
+	border: none;
+	border-bottom: 1px solid #b5b6b7;
+	width: 350px;
+	padding: 4px;
+	font-size: 15px;
+	color: gray;
+}
+input[type="checkbox"]{
+	width: 25px;
+	margin: 10px 0;
+}
+
+#personal{
+	position: relative;
+}
+.datosPersonales1{
+	/*background: yellow;*/
+}
+
+.datosPersonales2{
+	position: absolute;
+	top: 4px;
+	left: 600px;
+}
+select{
+	width: 130px;
+	padding: 4px;
+	font-size: 15px;
+}
+#age{
+	width: 80px;
+	text-align: center;
+	padding-left: 20px;
+}
+.puesto{
+	position: relative;
+}
+.puesto2{
+	position: absolute;
+	top: 0;
+	left: 600px;
+}
+.entidad{
+	position: relative;
+	height: 1550px;
+}
+.entidad2{
+	position: relative;
+	bottom: 370px;
+	left: 600px;
+	width: 470px;
+}
+.entidad3{
+	position: absolute;
+	bottom:123px;
+}
+.rrhh{
+	position: relative;
+}
+.rrhh2{
+	position: absolute;
+	top: 0;
+	left: 600px;
+}
+.financiamiento{
+	position: relative;
+}
+.fuente{
+	margin: 15px 0;
+}
+.fondos2{
+	position: absolute;
+	top: 0;
+	left: 600px;
+}
+.otraFuente{
+	position: relative;
+	padding-bottom: 25px;
+}
+.monto{
+	position: absolute;
+	top: 0;
+	left: 600px;
+}
+.infoAdd{
+	position: relative;
+	height: 700px;
+}
+.infoAdd2{
+	position: absolute;
+	top: 0;
+	left: 600px;
+}
+.btn-photo{
+	border-bottom: 1px solid #b5b6b7;
+	padding: 4px;
+}
+#otroMedio{
+	margin-top: 30px;
+}
+.vineta{
+	color: black;
+	font-weight: 600;
+}
+p{
+	line-height: 1.7;
+}
+.btn{
+	background: #F16507;
+	color: white;
+	text-align: center;
+	width: 100px;
+	padding: 10px 20px;
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
+	font-size: 15px;
+	margin-left: 40%;
+}
+.end{
+	margin-left: 60%;
+	margin-bottom: 80px;
+}
+.last{
+	/*position: absolute;*/
+	bottom: 0;
+	left: 0;
+	right: 0;
+	padding: 30px;
+	background: #3E3F40;
+}
+
+.foot{
+	display: inline-block;
+}
+.left{
+	line-height: 2;
+	margin-left: 20px;
+}
+.right{
+	left: 500px;
+	position: relative;
+	bottom: 50px;
+	text-align: center;
+
+}
+.icon{
+	margin: 10px 2px;
+	width: 40px;
+	color: #FFF;
+}
+
+
+footer{
+	position: relative; 
+	color: #fff;
 }
